# purescript

./: .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .hlint.yaml  .hspec  .travis.yml  1  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEVELOPER_GUIDE.md  INSTALL.md  LICENSE  Makefile  PureScript.cabal  README.md  RELEASE-0.2.md  RELEASE-0.3.md  RELEASE-0.4.md  RELEASE-0.5.md  RELEASE-0.6.md  RELEASE-0.7.md  RELEASE.md  RELEASE_CHECKLIST.md  RELEASE_GUIDE.md  Setup.hs  Setup.lhs  TypedHole3.purs  VERSIONING_POLICY.md  appveyor.yml  cabal.project  cabal.project.freeze  default-extensions.yaml  default.nix  execTests.sh  for newbie  get-dependency-licences  get-source-maps.sh  glob-test.sh  (+27 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  compiler-proposal.md  concrete-proposal.md  config.yml
.github/workflows/: ci.yml  release.yml
.nix/stack.materialized/: default.nix
CHANGELOG-2.d/: breaking_drop-repl-browser-backend.md  breaking_improve-apartness-checking.md
CHANGELOG-tmp.d/: feature_type_level_ints.md  fix_3559.md  fix_4268.md  internal_error-on-non-Main-modules.md
CHANGELOG.d/: README.md  break_switch-to-es-modules.md  breaking_disable-constraints-in-ffi.md  breaking_drop-deprecated-row-and-kind-syntax.md  breaking_fail-on-cjs-detected.md  breaking_fix-3981.md  breaking_fix-4179.md  breaking_remove-purs-bundle.md  breaking_remove-two-ad-hoc-case-statements.md  breaking_switch-to-es-modules.md  breaking_warn-on-two-ad-hoc-case-statements.md  bug_fix-moveQuantifiersToFront-scoping.md  bug_fix-prim-int-compare-docs.md  feature_3510.md  feature_add-codegen-command.md  feature_add-exclude-file-to-more-commands.md  feature_arm_builds.md  feature_attached-deriving-clauses.md  feature_closed-record-update.md  feature_compilation_progress.md  feature_corefn-strignify-numeral.md  feature_cse-for-typeclass-dicts.md  feature_derive-foldable.md  feature_derive-traversable-2.md  feature_derive-traversable.md  feature_disable-ffi-check.md  feature_display roles in html docs.md  feature_empty-fail-instances.md  feature_exclude_files_from_compile_input.md  feature_export-comments-in-corefn.md  feature_glob-input-files.md  feature_ide-dependency-filter.md  feature_ide-rebuild-without-filesystem.md  feature_increase-type-holes-amount.md  feature_is_reflectable.md  feature_issue-1120.md  feature_leading-and-trailing-delimiters.md  feature_local-type-synonyms.md  feature_local_qualification.md  feature_make-quote-work-on-more-kinds.md  (+137 more)
app/: Main.hs  SharedCLI.hs  Version.hs
app/Command/: Bundle.hs  Codegen.hs  Common.hs  Compile.hs  DCE.hs  Docs.hs  Graph.hs  Hierarchy.hs  IDE.hs  Ide.hs  IdeClient.hs  Publish.hs  QuickBuild.hs  REPL.hs
benchmarks/: Bench.hs
bundle/: .gitignore  README  build-stack.sh  build.sh  install.sh  winbuild-stack.sh  winbuild.sh
ci/: appveyor-cache-buster.txt  build-package-set.sh  build.hs  build.sh  convert-os-name.sh  disable-windows-defender.sh  fix-home  install-hlint.sh  run-hlint.sh
core-tests/: .gitignore  bower.json  psc-package.json  test-everything.sh
debug/: eventlog.js
docgen/: Main.hs
docs/: Makefile
examples/: .gitignore  Arrays.ps  Assign.ps  Conditional.ps  Console.ps  Foreach.js  Foreach.ps  List.js  List.ps  Match.ps  Maybe.ps  Nested.ps  Objects.ps  Operators.ps  Patterns.ps  Rank2.ps  ReadShow.ps  Recursion.ps  TypeDecl.ps  TypeSynonyms.ps  iota.ps  runAll.test  s.ps
hierarchy/: Main.hs
ide-bench/: Main.hs
lib/purescript-cst/: .gitignore  LICENSE  README.md  package.yaml  purescript-cst.cabal
lib/purescript-cst/src/Control/Monad/Supply/: Class.hs
lib/purescript-cst/src/Data/Text/: PureScript.hs
lib/purescript-cst/src/Language/PureScript/: Crash.hs  Environment.hs  Names.hs  Traversals.hs  TypeClassDictionaries.hs  Types.hs
lib/purescript-cst/src/Language/PureScript/AST/: Declarations.hs  Exported.hs  SourcePos.hs  Traversals.hs
lib/purescript-cst/src/Language/PureScript/CST/: Convert.hs  Errors.hs  Flatten.hs  Layout.hs  Lexer.hs  Monad.hs  Parser.y  Positions.hs  Print.hs  Traversals.hs  Types.hs  Utils.hs
lib/purescript-cst/src/Language/PureScript/CST/Traversals/: Type.hs
lib/purescript-cst/src/Language/PureScript/Constants/: Prim.hs
lib/purescript-cst/tests/: Main.hs  TestCst.hs
lib/purescript-cst/tests/purs/layout/: CaseGuards.purs  ClassHead.out  Commas.out  Delimiter.out  DoOperator.out  IfThenElseDo.purs
libraries/: .gitignore
license/: generate
license-generator/: generate  generate.hs  header.txt  lgpl.txt
macinstall/: build.sh
nix/: hls.nix  init.nix  nixpkgs.json
npm-package/: .gitignore  .npmrc  LICENSE  README.md  index.js  package.json  purs.bin.placeholder
play/: Main.hs
playground/: Main.hs
prelude/: README.md  prelude.purs  updateDocs.sh
psc/: Foreign.hs  JSON.hs  Main.hs  Main.hs.orig  Make.hs
psc-bundle/: Main.hs  README.md
psc-docs/: Ctags.hs  Etags.hs  Main.hs  Markdown.hs  Tags.hs  Utils.hs
psc-ide/: DESIGN.org  PROTOCOL.md  README.md
psc-ide-client/: Main.hs
psc-ide-server/: Main.hs  PROTOCOL.md  README.md
psc-make/: Main.hs  Make.hs
psc-mod/: Main.hs  Script.hs
psc-package/: Main.hs  README.md
psc-publish/: BoxesHelpers.hs  ErrorsWarnings.hs  Main.hs  Output.hs  Utils.hs
psc-upload-package/: BoxesHelpers.hs  Main.hs  Output.hs
psci/: Commands.hs  Completion.hs  Directive.hs  IO.hs  Main.hs  Make.hs  Make.hs.orig  PSCi.hs  Parser.hs  README.md  Types.hs
scripts/: psc  psc-bundle  psc-docs  psc-hierarchy  psc-ide-client  psc-ide-server  psc-publish  psci
src/: Main.hs  PSPrelude.hs  PrettyPrint.hs  PureScript.hs  Test.hs  sess
stack.materialized/: purescript-ast.nix  purescript-cst.nix  purescript.nix
tests/: Main.hs  PscIdeSpec.hs  TestAst.hs  TestBundle.hs  TestCompiler.hs  TestCoreFn.hs  TestCst.hs  TestDCE.hs  TestDocs.hs  TestGraph.hs  TestHierarchy.hs  TestIde.hs  TestInteractive.hs  TestMake.hs  TestPrimDocs.hs  TestPscIde.hs  TestPscPublish.hs  TestPsci.hs  TestSourceMaps.hs  TestUtils.hs  prelude.purs
travis/: after.sh  build.sh  configure.sh  test-install.sh
(+3291 files in other folders)
