name: purescript
version: 0.1.0
cabal-version: >=1.8
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) Phil Freeman 2013
maintainer: Phil Freeman <paf31@cantab.net>
stability: experimental
synopsis: PureScript Programming Language Compiler
description: A small compile-to-JS language with extensible records and type-safe blocks
author: Phil Freeman <paf31@cantab.net>
data-dir: ""
 
library
    build-depends: base >=4 && <5, syb -any, cmdtheline -any,
                   containers -any, mtl -any, transformers -any, parsec -any,
                   utf8-string -any
    exposed-modules: PureScript.CodeGen.Pretty.Values
                     PureScript.CodeGen.Pretty.Types PureScript PureScript.Declarations
                     PureScript.Names PureScript.TypeChecker.Synonyms
                     PureScript.CodeGen.Externs PureScript.CodeGen.JS
                     PureScript.CodeGen.Common.Gen PureScript.CodeGen.Common Main
                     PureScript.CodeGen PureScript.Kinds PureScript.Parser
                     PureScript.TypeChecker PureScript.Types PureScript.Values
                     PureScript.Parser.Common PureScript.Parser.Declarations
                     PureScript.Parser.Types PureScript.Parser.Values
                     PureScript.TypeChecker.Kinds PureScript.TypeChecker.Monad
                     PureScript.TypeChecker.Types PureScript.Parser.State
                     PureScript.Parser.Kinds PureScript.CodeGen.Pretty.Kinds
    exposed: True
    buildable: True
    hs-source-dirs: src
    other-modules: PureScript.Pretty
 
executable psc
    build-depends: base >=4 && <5, cmdtheline -any, containers -any,
                   mtl -any, transformers -any, parsec -any, utf8-string -any,
                   syb -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: PureScript.Pretty
 
test-suite tests
    build-depends: base >=4 && <5, syb -any, directory -any,
                   filepath -any, containers -any, mtl -any, transformers -any,
                   parsec -any, utf8-string -any, purescript -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    hs-source-dirs: tests